--- a/.pylintrc
+++ b/.pylintrc
@@ -5,4 +5,4 @@ load-plugins=
 [MESSAGES CONTROL]
 # Disable the given comma separated list of messages by id or name.
 # e.g. W0611, C0103
-disable=C0114,C0115,C0116,R0903,R0913,C0301,W0621
+disable=C0114,C0115,C0116,R0903,R0913,C0301,W0621,W0718
